--- a/index.html
+++ b/index.html
@@ -36,16 +36,16 @@
       <!-- NAVIGATION MENUS -->
       <div class="menu">
         <li><a href="../sorts/bubblesort.html" id="selected">BUBBLE SORT</a></li>
-	<li class="full-text"><a href="../sorts/selectionsort.html">SELECTTION SORT</a></li>
-	<li class="short-text"><a href="../sorts/selectionsort.html">SEL</a></li>
-        <li class="full-text"><a href="../sorts/insertionsort.html">INSERTION SORT</a></li>
-	<li class="short-text"><a href="../sorts/insertionsort.html">INS</a></li>
-	<li class="full-text"><a href="../sorts/mergesort.html">MERGE SORT</a></li>
-        <li class="short-text"><a href="../sorts/mergesort.html">MER</a></li>
-        <li class="full-text"><a href="../sorts/quicksort.html">QUICK SORT</a></li>
-        <li class="short-text"><a href="../sorts/quicksort.html">QUI</a></li>
-        <li class="full-text"><a href="../sorts/heapsort.html">HEAP SORT</a></li>
-        <li class="short-text"><a href="../sorts/heapsort.html">HEAP</a></li>
+	<li class="full-text"><a href="sorts/selectionsort.html">SELECTTION SORT</a></li>
+	<li class="short-text"><a href="sorts/selectionsort.html">SEL</a></li>
+        <li class="full-text"><a href="sorts/insertionsort.html">INSERTION SORT</a></li>
+	<li class="short-text"><a href="sorts/insertionsort.html">INS</a></li>
+	<li class="full-text"><a href="sorts/mergesort.html">MERGE SORT</a></li>
+        <li class="short-text"><a href="sorts/mergesort.html">MER</a></li>
+        <li class="full-text"><a href="sorts/quicksort.html">QUICK SORT</a></li>
+        <li class="short-text"><a href="sorts/quicksort.html">QUI</a></li>
+        <li class="full-text"><a href="sorts/heapsort.html">HEAP SORT</a></li>
+        <li class="short-text"><a href="sorts/heapsort.html">HEAP</a></li>
       </div>
     </ul>
   </nav>
@@ -183,11 +183,11 @@ Speed: <span id="speed-slider-span">10</span><br>
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.8.0/highlight.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script type="text/javascript" src="../js/base.js"></script>
-    <script type="text/javascript" src="../js/sorts_implementations/bubblesort.js"></script>
-    <script type="text/javascript" src="../js/base_sort.js" defer></script>    
-    <script type="text/javascript" src="../js/visualization/algorithms/bubblesort.js"></script>
-    <script type="text/javascript" src="../js/visualization/script.js"></script>
+    <script type="text/javascript" src="js/base.js"></script>
+    <script type="text/javascript" src="js/sorts_implementations/bubblesort.js"></script>
+    <script type="text/javascript" src="js/base_sort.js" defer></script>    
+    <script type="text/javascript" src="js/visualization/algorithms/bubblesort.js"></script>
+    <script type="text/javascript" src="js/visualization/script.js"></script>
 </body>
 
 </html>
