--- a/index.html
+++ b/index.html
@@ -153,12 +153,12 @@ Speed: <span id="speed-slider-span">10</span><br>
             <div style="font-family: 'Jura', Courier, monospace; font-size: 35px;">IMPLEMENTATIONS</div>
             <div id="menu-code" data-aos="fade-right">
                 <div class="menu-btns" id="menu-btns">
-                    <button><img src="../images/c_icon.png" width="32" height="32" title="C" alt="C"></button>
-                    <button><img src="../images/cpp_icon.png" width="32" height="32" title="C++" alt="C++"></button>
-                    <button><img src="../images/java_icon.png" width="32" height="32" title="Java" alt="Java"></button>
-                    <button><img src="../images/javascript_icon.png" width="32" height="32" title="JavaScript"
+                    <button><img src="images/c_icon.png" width="32" height="32" title="C" alt="C"></button>
+                    <button><img src="images/cpp_icon.png" width="32" height="32" title="C++" alt="C++"></button>
+                    <button><img src="images/java_icon.png" width="32" height="32" title="Java" alt="Java"></button>
+                    <button><img src="images/javascript_icon.png" width="32" height="32" title="JavaScript"
                             alt="JavaScript"></button>
-                    <button><img src="../images/python_icon.png" width="32" height="32" title="Python"
+                    <button><img src="images/python_icon.png" width="32" height="32" title="Python"
                             alt="Python"></button>
                 </div>
                 <div id="code-content">
