--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@ Speed: <span id="speed-slider-span">10</span><br>
                 </p>
                 <p>
                     It's a simple algorithm to implement, but not much efficient: on average, quadratic sorting
-                    algorithms with the same time complexity such as <a href="../sorts/selectionsort.html">Selection
-                        Sort</a> or <a href="../sorts/insertionsort.html">Insertion Sort</a> perform better.<br>
+                    algorithms with the same time complexity such as <a href="/sorts/selectionsort.html">Selection
+                        Sort</a> or <a href="/sorts/insertionsort.html">Insertion Sort</a> perform better.<br>
                     It has several variants to improve its performances, such as <a
                         href="https://www.geeksforgeeks.org/cocktail-sort/" target="_blank">Shaker Sort</a>,
                     <a href="https://www.geeksforgeeks.org/odd-even-sort-brick-sort/" target="_blank">Odd Even Sort</a>
