--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <div class="title" data-aos="fade-down">
                 Bubble Sort
             </div>
-            <div id="change-container" style="float: right; white-space: nowrap;">
+            <div id="change-container"">
                 
 <button class="change-btn" id="shuffle"><i class="material-icons">shuffle</i></button>
                 <button class="change-btn" id="play"><i class="material-icons" id="mp">play_arrow</i></button>
