--- a/sorts/quicksort.html
+++ b/sorts/quicksort.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@300&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Electrolize&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@2.1.4/css/boxicons.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@2.1.4/css/boxicons.min.css">
     <link rel="stylesheet" type="text/css" href="../css/base.css">
     <!-- <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet"> -->
     <noscript>JavaScript is required for this website. Please allow JavaScript and refresh the page.</noscript>
@@ -23,52 +23,52 @@
 
 <body>
     <nav class="navbar">
-    <div class="logo">SORT VISUALIZER</div>
+        <div class="logo">SORT VISUALIZER</div>
 
-    <!-- NAVIGATION MENU -->
-    <ul class="nav-links">
+        <!-- NAVIGATION MENU -->
+        <ul class="nav-links">
 
-      <!-- USING CHECKBOX HACK -->
-      <input type="checkbox" id="checkbox_toggle" />
-      <label for="checkbox_toggle" class="hamburger">&#9776;</label>
+            <!-- USING CHECKBOX HACK -->
+            <input type="checkbox" id="checkbox_toggle" />
+            <label for="checkbox_toggle" class="hamburger">&#9776;</label>
 
-      <!-- NAVIGATION MENUS -->
-      <div class="menu">
-	<li class="short-text"><a href="../sorts/bubblesort.html">BUB</a></li>
-	<li class="full-text"><a href="../sorts/bubblesort.html">BUBBLE SORT</a></li>
-	<li class="full-text"><a href="../sorts/selectionsort.html">SELECTTION SORT</a></li>
-	<li class="short-text"><a href="../sorts/selectionsort.html">SEL</a></li>
-        <li class="full-text"><a href="../sorts/insertionsort.html">INSERTION SORT</a></li>
-	<li class="short-text"><a href="../sorts/insertionsort.html">INS</a></li>
-	<li class="full-text"><a href="../sorts/mergesort.html">MERGE SORT</a></li>
-        <li class="short-text"><a href="../sorts/mergesort.html">MER</a></li>
-        <li><a href="../sorts/quicksort.html" id="selected">QUICK SORT</a></li>
-        <li class="full-text"><a href="../sorts/heapsort.html">HEAP SORT</a></li>
-        <li class="short-text"><a href="../sorts/heapsort.html">HEAP</a></li>
-      </div>
-    </ul>
-  </nav>
+            <!-- NAVIGATION MENUS -->
+            <div class="menu">
+                <li class="short-text"><a href="../sorts/bubblesort.html">BUB</a></li>
+                <li class="full-text"><a href="../sorts/bubblesort.html">BUBBLE SORT</a></li>
+                <li class="full-text"><a href="../sorts/selectionsort.html">SELECTTION SORT</a></li>
+                <li class="short-text"><a href="../sorts/selectionsort.html">SEL</a></li>
+                <li class="full-text"><a href="../sorts/insertionsort.html">INSERTION SORT</a></li>
+                <li class="short-text"><a href="../sorts/insertionsort.html">INS</a></li>
+                <li class="full-text"><a href="../sorts/mergesort.html">MERGE SORT</a></li>
+                <li class="short-text"><a href="../sorts/mergesort.html">MER</a></li>
+                <li><a href="../sorts/quicksort.html" id="selected">QUICK SORT</a></li>
+                <li class="full-text"><a href="../sorts/heapsort.html">HEAP SORT</a></li>
+                <li class="short-text"><a href="../sorts/heapsort.html">HEAP</a></li>
+            </div>
+        </ul>
+    </nav>
     <div>
         <div id="box">
             <div class="title" data-aos="fade-down">
                 Quick Sort
             </div>
             <div id="change-container" style="float: right; white-space: nowrap;">
-                
-<button class="change-btn" id="shuffle"><i class="material-icons">shuffle</i></button>
+
+                <button class="change-btn" id="shuffle"><i class="material-icons">shuffle</i></button>
                 <button class="change-btn" id="play"><i class="material-icons" id="mp">play_arrow</i></button>
                 <div id="sliders">
                     <div id="elements-text">
-Elements: <span id="size-slider-span">25</span><br>
+                        Elements: <span id="size-slider-span">25</span><br>
                     </div>
                     <div class="slider-container">
                         <input type="range" id="size-slider" class="slider" oninput="sizeChange()" autocomplete="off">
                     </div>
-<div id="speed-text">
-Speed: <span id="speed-slider-span">10</span><br>
+                    <div id="speed-text">
+                        Speed: <span id="speed-slider-span">10</span><br>
                     </div>
                     <div class="slider-container">
-                        <input type="range" id="speed-slider" class="slider" oninput="speedChange()"autocomplete="off">
+                        <input type="range" id="speed-slider" class="slider" oninput="speedChange()" autocomplete="off">
                     </div>
                 </div>
             </div>
@@ -100,7 +100,8 @@ Speed: <span id="speed-slider-span">10</span><br>
                     This partition technique based on the pivot is called <a
                         href="https://en.wikipedia.org/wiki/Divide-and-conquer_algorithm" target="_blank">Divide and
                         conquer</a>.
-                    It's a performant strategy also used by other sorting algorithms, such as <a href="../sorts/mergesort.html">Merge
+                    It's a performant strategy also used by other sorting algorithms, such as <a
+                        href="../sorts/mergesort.html">Merge
                         Sort</a>.
                 </p>
             </div>
@@ -163,22 +164,24 @@ Speed: <span id="speed-slider-span">10</span><br>
         </div>
     </div>
     <footer class="footer">
-	<div class="footer-social">
+        <div class="footer-social">
             <a href="https://www.linkedin.com/in/rishi-dhama-11b5071a0"><i class="bx bxl-linkedin bx-md"></i></a>
             <a href="https://github.com/rishidhama/"><i class="bx bxl-github bx-md circle"></i></a>
             <a href="mailto:rishidhama00@gmail.com"><i class="bx bxl-gmail bx-md"></i></a>
         </div>
-	<div class="copyright">
-        	&copy;Rishi Dhama
-    	</div>
+        <div class="copyright">
+            &copy;Rishi Dhama
+        </div>
     </footer>
     <script>var algo_selected = "Quick Sort";</script>
-<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+        crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.8.0/highlight.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script type="text/javascript" src="../js/base.js"></script>
     <script type="text/javascript" src="../js/sorts_implementations/quicksort.js"></script>
-    <script type="text/javascript" src="../js/base_sort.js" defer></script>    
+    <script type="text/javascript" src="../js/base_sort.js" defer></script>
     <script type="text/javascript" src="../js/visualization/algorithms/quicksort.js"></script>
     <script type="text/javascript" src="../js/visualization/script.js"></script>
 </body>
