--- a/index.html
+++ b/index.html
@@ -170,9 +170,7 @@
     </div>
     <footer class="footer">
         <div class="footer-social">
-            <a href="https://www.linkedin.com/in/rishi-dhama-11b5071a0"><i class="bx bxl-linkedin bx-md"></i></a>
-            <a href="https://github.com/rishidhama/"><i class="bx bxl-github bx-md circle"></i></a>
-            <a href="mailto:rishidhama00@gmail.com"><i class="bx bxl-gmail bx-md"></i></a>
+            contact us - rishidhama00@gmail.com
         </div>
         <div class="copyright">
             &copy;Rishi Dhama
