--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
     </div>
     <footer class="footer">
         <div class="footer-social">
-            contact us - <a href="mailto:webmaster@example.com"></a>rishidhama00@gmail.com
+            contact - <a href="mailto:webmaster@example.com">rishidhama00@gmail.com</a>
         </div>
         <div class="copyright">
             &copy;Rishi Dhama
