--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
     </div>
     <footer class="footer">
         <div class="footer-social">
-            contact - <a href="mailto:webmaster@example.com">rishidhama00@gmail.com</a>
+            contact - <a href="mailto:rishidhama00@gmail.com"><i class="bx bxl-gmail bx-md"></i></a>
         </div>
         <div class="copyright">
             &copy;Rishi Dhama
